# Garmin-Running-Analysis

garmin_running_analysis/: LICENSE  Makefile  README.md  pyproject.toml
garmin_running_analysis/docs/: mkdocs.yml
garmin_running_analysis/docs/docs/: index.md
garmin_running_analysis/garmin_running_analysis/: __init__.py  dataset.py  features.py  plots.py
garmin_running_analysis/garmin_running_analysis/modeling/: predict.py  train.py
